--- a/src/components/CardGame/style.css
+++ b/src/components/CardGame/style.css
@@ -2,11 +2,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     width: 130px;
     height: 160px;
     background-color: var(--color-alura);
     border: 4px solid var(--color-floral-white);
+    transition: all 0.5s ease;
+    transform-style: preserve-3d;
 }
 .card-game img{
+    position: absolute;
     width: 95px;
+}
+.flip{
+    transform: rotateY(180deg);
 }
