--- a/src/styles/elements/base.css
+++ b/src/styles/elements/base.css
@@ -1,3 +1,9 @@
+#app{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
 body {
     background-color: var(--color-pomb-and-power);
 }
