--- a/src/components/FrontBackCard/style.css
+++ b/src/components/FrontBackCard/style.css
@@ -1,3 +1,17 @@
-/* .backcard{
-    width: 95px;
-} */
+.card-front-back{
+    position: relative;
+    width: 130px;
+    height: 160px;
+    transform-style: preserve-3d;
+    transition: 600ms ease-in-out;
+}
+.card-front-back.-active{
+    transform: rotateY(180deg);
+}
+.card-front-back > .card{
+    position: absolute;
+    backface-visibility: hidden;
+}
+.card-front-back > .card.-back{
+    transform: rotateY(180deg);
+}
