--- a/src/components/HeaderContainer/style.css
+++ b/src/components/HeaderContainer/style.css
@@ -4,26 +4,40 @@
     justify-content: space-around;
     width: 100%;
     height: 100px;
+    position: relative;
 
     font-family: 'Silkscreen', cursive;
     font-size: 2rem;
 }
-.header-container .left{
+.header-container > .indicator{
+    position: absolute;
+    top: 0;
+    transition: all 1s ease-in-out;
+}
+.header-container > .indicator[data-currentPlayer="1"]{
+    transform: translateX(-100px);
+    
+}
+.header-container > .indicator[data-currentPlayer="0"]{
+    transform: translateX(94px);
+}
+
+.header-container > .left{
     display: flex;
     align-items: center;
 }
-.header-container .left .placar{
+.header-container > .left > .placar{
     margin: 0 10px;
 }
 .vs{
     margin: 0 10px;
 }
-.header-container .rigth{
+.header-container > .rigth{
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
 }
-.header-container .rigth .placar{
+.header-container > .rigth > .placar{
     margin: 0 10px;
 }
 
